Add default annotation